@@ -27,9 +27,10 @@ package runtime.valhalla.inlinetypes;
  * @test VolatileTest
  * @summary check effect of volatile keyword on flattenable fields
  * @modules java.base/jdk.internal.misc
+ *          java.base/jdk.internal.vm.annotation
  * @library /test/lib
- * @compile --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED VolatileTest.java
- * @run main/othervm -XX:+EnableValhalla -XX:InlineFieldMaxFlatSize=128 --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED runtime.valhalla.inlinetypes.VolatileTest
+ * @compile VolatileTest.java
+ * @run main/othervm -XX:+EnableValhalla -XX:InlineFieldMaxFlatSize=128 runtime.valhalla.inlinetypes.VolatileTest
  */
 
 import jdk.internal.misc.Unsafe;
